--- a/src/edu/hendrix/csci250proj2/PaintingGamePlay.fxml
+++ b/src/edu/hendrix/csci250proj2/PaintingGamePlay.fxml
@@ -21,17 +21,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="606.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="606.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="41.0" prefWidth="570.0">
                <children>
-                  <Label alignment="CENTER" prefHeight="33.0" prefWidth="112.0" text="Please draw a :" />
-                  <TextField prefHeight="31.0" prefWidth="463.0" />
-                  <Button mnemonicParsing="false" text="Done Painting!">
+                  <Label alignment="CENTER" prefHeight="33.0" prefWidth="112.0" text="Please draw a:" />
+                  <TextField prefWidth="557.0" />
+                  <Button alignment="CENTER_RIGHT" mnemonicParsing="false" text="Done Painting!">
                      <HBox.margin>
-                        <Insets left="45.0" />
+                        <Insets />
                      </HBox.margin>
                   </Button>
                </children>
@@ -96,7 +96,7 @@
                      <effect>
                         <ImageInput>
                            <source>
-                              <Image url="@FramePainting.jpg" />
+                              <Image url="@resources/FramePainting.jpg" />
                            </source>
                         </ImageInput>
                      </effect>
