--- a/src/edu/hendrix/csci250proj2/PaintingGameRate.fxml
+++ b/src/edu/hendrix/csci250proj2/PaintingGameRate.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -13,14 +19,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="662.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="662.0" prefWidth="621.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.hendrix.csci250proj2.ControlRating">
    <center>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="458.0" prefWidth="605.0">
+            <HBox alignment="CENTER" prefHeight="458.0" prefWidth="605.0">
                <children>
-                  <ImageView fitHeight="450.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="finalpic" fitHeight="450.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </HBox>
             <Label text="Rate your opponent!">
@@ -31,9 +36,10 @@
             <Slider blockIncrement="5.0" max="5.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
             <ImageView fitHeight="81.0" fitWidth="607.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@resources/StarRating.png" />
+                  <Image url="@StarRating.png" />
                </image>
             </ImageView>
+            <Button fx:id="ok" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#open" prefHeight="31.0" prefWidth="91.0" text="OK" textAlignment="CENTER" />
          </children>
          <padding>
             <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
@@ -43,25 +49,4 @@
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
-   <top>
-      <MenuBar prefHeight="32.0" prefWidth="594.0" BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
-            <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
-   </top>
 </BorderPane>
