--- a/src/edu/hendrix/csci250proj2/gui/PaintingGameGUI.fxml
+++ b/src/edu/hendrix/csci250proj2/gui/PaintingGameGUI.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.effect.ImageInput?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.layout.BorderPane?>
@@ -16,18 +14,32 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="606.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.hendrix.csci250proj2.ControlGameplay">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="606.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.hendrix.csci250proj2.PaintingGameController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="41.0" prefWidth="570.0">
+            <HBox alignment="TOP_CENTER">
                <children>
-                  <Label alignment="CENTER" prefHeight="33.0" prefWidth="112.0" text="Please draw:" />
-                  <TextField fx:id="pleasedraw" editable="false" prefHeight="31.0" prefWidth="463.0" />
+                  <Label alignment="CENTER" text="Please draw:">
+                     <HBox.margin>
+                        <Insets bottom="20.0" left="20.0" top="20.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="16.0" />
+                     </font></Label>
+                  <Label fx:id="drawingPrompt" text="Label">
+                     <HBox.margin>
+                        <Insets bottom="20.0" left="5.0" right="20.0" top="20.0" />
+                     </HBox.margin>
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
                   <Button fx:id="donepainting" mnemonicParsing="false" onAction="#open" text="Done Painting!">
                      <HBox.margin>
-                        <Insets left="45.0" />
+                        <Insets top="20.0" />
                      </HBox.margin>
                   </Button>
                </children>
@@ -36,32 +48,39 @@
                <children>
                   <VBox prefHeight="450.0" prefWidth="197.0">
                      <children>
-                        <TextArea fx:id="userfield" editable="false" prefHeight="220.0" prefWidth="110.0">
+                        <TextArea fx:id="userfield" editable="false" prefHeight="220.0">
                            <padding>
                               <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                            </padding>
                         </TextArea>
-                        <Label alignment="CENTER" prefHeight="27.0" prefWidth="107.0" text="Pick your color:" />
-                        <GridPane prefHeight="129.0" prefWidth="139.0">
+                        <Label alignment="CENTER" text="Pick your color:">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin></Label>
+                        <GridPane>
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
                           </columnConstraints>
                           <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="-Infinity" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
                               <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Red" />
                               <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Orange" GridPane.columnIndex="1" />
                               <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Yellow" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" prefWidth="75.0" text="Green" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Green" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                               <Button defaultButton="true" mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Blue" GridPane.rowIndex="2" />
-                              <Button mnemonicParsing="false" prefWidth="75.0" text="Pink" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="75.0" text="Pink" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                            </children>
                         </GridPane>
-                        <ToggleButton mnemonicParsing="false" prefHeight="73.0" prefWidth="157.0" text="Erase" />
+                        <Button mnemonicParsing="false" prefWidth="200.0" text="Erase">
+                           <VBox.margin>
+                              <Insets top="5.0" />
+                           </VBox.margin>
+                        </Button>
                      </children>
                   </VBox>
                   <Canvas height="450.0" width="600.0">
@@ -77,20 +96,23 @@
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Label alignment="CENTER" prefHeight="72.0" prefWidth="84.0" text="Ink :">
+                  <Label alignment="CENTER" text="Ink:">
                      <HBox.margin>
-                        <Insets top="8.0" />
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </HBox.margin>
                   </Label>
-                  <ProgressBar prefHeight="74.0" prefWidth="699.0" progress="1.0">
+                  <ProgressBar prefHeight="74.0" prefWidth="699.0" progress="0.0">
                      <HBox.margin>
-                        <Insets top="8.0" />
+                        <Insets />
                      </HBox.margin>
                   </ProgressBar>
                </children>
                <opaqueInsets>
                   <Insets top="8.0" />
                </opaqueInsets>
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
             </HBox>
          </children>
          <padding>
