--- a/src/edu/hendrix/csci250proj2/gui/PaintingGameGUI.fxml
+++ b/src/edu/hendrix/csci250proj2/gui/PaintingGameGUI.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.hendrix.csci250proj2.gui.PaintingGameController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.hendrix.csci250proj2.gui.PaintingGameController">
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -44,7 +45,7 @@
             </HBox>
             <HBox>
                <children>
-                  <VBox fx:id="colorStuff">
+                  <VBox fx:id="colorStuff" maxWidth="200.0" minWidth="200.0" prefWidth="200.0">
                      <children>
                         <TextArea fx:id="userfield" editable="false" prefHeight="220.0">
                            <padding>
@@ -56,20 +57,17 @@
                               <Insets top="10.0" />
                            </VBox.margin></Label>
                         <ColorPicker fx:id="colorChooser" prefWidth="200.0" />
-                        <Button minWidth="-Infinity" mnemonicParsing="false" prefWidth="200.0" text="Erase">
-                           <VBox.margin>
-                              <Insets top="5.0" />
-                           </VBox.margin>
-                        </Button>
+                        <ToggleButton fx:id="eraser" mnemonicParsing="false" onAction="#erase" prefHeight="39.0" prefWidth="200.0" text="Erase" />
                      </children>
                   </VBox>
-                  <Pane fx:id="drawingArea" minHeight="-Infinity" minWidth="-Infinity" prefHeight="299.0" prefWidth="400.0">
+                  <Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="299.0" prefWidth="400.0">
                      <children>
                         <ImageView fitHeight="300.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@resources/FramePainting.png" />
                            </image>
                         </ImageView>
+                        <Pane fx:id="drawingArea" layoutX="38.0" layoutY="41.0" prefHeight="218.0" prefWidth="323.0" />
                      </children></Pane>
                </children>
             </HBox>
