--- a/src/edu/hendrix/csci250proj2/gui/PaintingGameGUI.fxml
+++ b/src/edu/hendrix/csci250proj2/gui/PaintingGameGUI.fxml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -20,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="882.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.hendrix.csci250proj2.gui.PaintingGameController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="636.0" prefWidth="882.0" xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.hendrix.csci250proj2.gui.PaintingGameController">
    <center>
       <VBox prefHeight="652.0" prefWidth="882.0" BorderPane.alignment="CENTER">
          <children>
@@ -58,7 +54,8 @@
                            </VBox.margin></Label>
                         <ColorPicker fx:id="colorChooser" prefWidth="200.0" />
                         <Label prefHeight="30.0" prefWidth="66.0" text="                " />
-                        <Button fx:id="eraseButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#eraseDrawing" prefHeight="77.0" prefWidth="200.0" text="Erase">
+                        <ToggleButton fx:id="eraseButton" mnemonicParsing="false" onAction="#eraseDrawing" prefHeight="46.0" prefWidth="200.0" text="Erase" />
+                        <Button fx:id="clearButton" minWidth="-Infinity" mnemonicParsing="false" onAction="#clearDrawing" prefHeight="46.0" prefWidth="200.0" text="Clear">
                            <VBox.margin>
                               <Insets top="5.0" />
                            </VBox.margin>
